--- a/LesleyAnneChua_Interactive-Sketchbook/index.html
+++ b/LesleyAnneChua_Interactive-Sketchbook/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <title>LAC's Sketchbook</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
     <body>
         <h1>Sketchbook Navigation</h1>
@@ -23,4 +26,5 @@
             <p><a href="system-sketches/micro.html">System Sketches</a></p>
             <p><a href="sketch_9/index.html">Sketch #9</a></p>
     </body>
+
 </html>
