added google fonts

--- a/LesleyAnneChua_Interactive-Sketchbook/sketch_5/index.html
+++ b/LesleyAnneChua_Interactive-Sketchbook/sketch_5/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <title>P5 Sketch #5</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 
         <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
     </head>
