--- a/LesleyAnneChua_Interactive-Sketchbook/micro-ideas/microIdeas.html
+++ b/LesleyAnneChua_Interactive-Sketchbook/micro-ideas/microIdeas.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <title>Micro Ideas</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
     <body>
         <h1>Micro-Project Idea Bank</h1>
