Fixed Nav AGAIN

--- a/LesleyAnneChua_Interactive-Sketchbook/index.html
+++ b/LesleyAnneChua_Interactive-Sketchbook/index.html
@@ -10,8 +10,8 @@
 </head>
     <body>
         <h1>Sketchbook Navigation</h1>
-        <p>Week 1–4</p>
-            <p>WEEK 1: <a href="sketch_1/index.html">Sketch #1</a> / <a href="sketch_2/index.html">Sketch #2</a> / <a href="sketch_3/index.html">Sketch #3</a></p>
+        <h2>Weeks 1–4</h2>
+        <p>WEEK 1: <a href="sketch_1/index.html">Sketch #1</a> / <a href="sketch_2/index.html">Sketch #2</a> / <a href="sketch_3/index.html">Sketch #3</a></p>
         <p>Week 2: <a href="sketch_4/index.html">Sketch #4</a> / <a href="sketch_5/index.html">Sketch #5</a> / <a href="sketch_6/index.html">Sketch #6</a></p>
         <p>Week 3: <a href="sketch_7/index.html">Sketch #7</a> / <a href="micro-ideas/microIdeas.html">Micro Ideas</a> / <a href="sketch_8/index.html">Sketch #8</a></p>
         <p>Week 4: <a href="system-sketches/micro.html">System Sketches</a> / <a href="sketch_9/index.html">Sketch #9</a></p>
@@ -20,3 +20,4 @@
     </body>
 
 </html>
+
