--- a/LesleyAnneChua_Interactive-Sketchbook/index.html
+++ b/LesleyAnneChua_Interactive-Sketchbook/index.html
@@ -17,8 +17,10 @@
         <p>Week 4: <a href="system-sketches/micro.html">System Sketches</a> / <a href="sketch_9/index.html">Sketch #9</a></p>
         <h2>Micro-Project</h2>
         <p><a href="micro-project/progress1.html">Progress #1</a></p>
+        <p><a href="micro-project/progress2.html">Progress #1</a></p>
     </body>
 
 </html>
+
 
 
