update progress 2 text
Updated the text in the paragraph for clarity and future plans.

--- a/LesleyAnneChua_Interactive-Sketchbook/micro-project/progress2.html
+++ b/LesleyAnneChua_Interactive-Sketchbook/micro-project/progress2.html
@@ -12,10 +12,11 @@
 </head>
     <body>
         <h1>Micro-Project: Progress #2</h1>
-        <p>Made a separate link for testing between classes.</p>
+        <p>Made a separate link to preserve updated text until later (will keep in one file from here on out).</p>
 
         <script src="js/progress2.js"></script>
     </body>
 
 </html>
+
 
